--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "ansi-regex": "^6.1.0",
     "ansi-styles": "^6.2.1",
     "any-promise": "^1.3.0",
